luarocksorg/state/Linux/x64/log/mwcrng~1.2-1_err.txt
Warning: skipping dependency checks.
l_rng.c:7:1: error: unknown type name ‘uint32_t’
 static uint32_t seeds[NUMBER_OF_SEEDS];
 ^
l_rng.c:8:1: error: unknown type name ‘uint32_t’
 static uint32_t carry = 362436;
 ^
l_rng.c:12:15: error: unknown type name ‘uint32_t’
 void init_rng(uint32_t metaseed)
               ^
l_rng.c:32:1: error: unknown type name ‘uint32_t’
 static uint32_t CMWC4096()
 ^
l_rng.c: In function ‘CMWC4096’:
l_rng.c:35:5: error: unknown type name ‘uint64_t’
     uint64_t multiplier = 18782;
     ^
l_rng.c:36:5: error: unknown type name ‘uint32_t’
     static uint32_t seed_selection = NUMBER_OF_SEEDS - 1;
     ^
l_rng.c:37:5: error: unknown type name ‘uint64_t’
     uint64_t t = 0;
     ^
l_rng.c:38:5: error: unknown type name ‘uint32_t’
     uint32_t j = 0;
     ^
l_rng.c:39:5: error: unknown type name ‘uint32_t’
     static uint32_t lag = 0xfffffffe;
     ^
l_rng.c:43:5: warning: right shift count >= width of type [enabled by default]
     carry = (t>>32);
     ^
l_rng.c: In function ‘l_init’:
l_rng.c:58:15: error: ‘uint32_t’ undeclared (first use in this function)
     init_rng((uint32_t) luaL_checkinteger(L, 1));
               ^
l_rng.c:58:15: note: each undeclared identifier is reported only once for each function it appears in
l_rng.c:58:25: error: expected ‘)’ before ‘luaL_checkinteger’
     init_rng((uint32_t) luaL_checkinteger(L, 1));
                         ^
l_rng.c: In function ‘l_dice’:
l_rng.c:84:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for(int t = 0; t < throws; t++)
     ^
l_rng.c:84:5: note: use option -std=c99 or -std=gnu99 to compile your code

Error: Build error: Failed compiling object l_rng.o
